# pinyin-kit

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  pinyin-kit.pc.in
src/: Makefile.am  Makefile.in  getpinyin.c  getpinyindemo.c  pinyincmp.c  pinyincmpdemo.c
